--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,67 +1,107 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+:root {
+  --clr-text:       hsl(204, 100%, 1%);
+  --clr-surface:    hsl(0, 0, 100%);
+  --clr-primary:    hsl(329, 85%, 53%);
+  --clr-secondary:  hsl(208, 83%, 93%);
+  --clr-accent:     hsl(89, 85%, 33%);
+
+  --ff-base: 'PT Sans', sans-serif;
+  --ff-accent: 'Nunito', sans-serif;
+
+ /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.414,5,0,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --fs-300: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+  --fs-400: clamp(1.35rem, calc(1.20rem + 0.73vw), 1.77rem);
+  --fs-500: clamp(1.62rem, calc(1.31rem + 1.53vw), 2.50rem);
+  --fs-600: clamp(1.94rem, calc(1.39rem + 2.77vw), 3.53rem);
+  --fs-700: clamp(2.33rem, calc(1.41rem + 4.63vw), 5.00rem);
+  --fs-800: clamp(2.80rem, calc(1.32rem + 7.42vw), 7.07rem);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --clr-text:       hsl(0, 0, 100%);
+    --clr-surface:    hsl(204, 100%, 1%);
+    --clr-primary:    hsl(329, 85%, 53%);
+    --clr-secondary:  hsl(208, 83%, 13%);
+    --clr-accent:     hsl(89, 85%, 33%);
+  }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html {
+  color-scheme: light dark;
+}
+
 body {
-	font-family: Verdana, sans-serif;
-	margin: auto;
-	padding: 20px;
-	max-width: 65ch;
-	text-align: left;
-	background-color: #fff;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	line-height: 1.5;
-	color: #444;
+  font-family: var(--ff-base);
+  font-size: var(--fs-300);
+  line-height: 1.6;
+  color: var(--clr-text);
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-	color: #222;
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: var(--ff-accent);
+  line-height: 1.1;
+  text-wrap: balance;
 }
+
+h1 {
+  font-size: var(--fs-700);
+  color: var(--clr-primary);
+}
+
+h2 {
+  font-size: var(--fs-600);
+}
+
+h3 {
+  font-size: var(--fs-400);
+}
+
+.container {
+  margin-inline: auto;
+  width: min(100% - 3rem, 65ch);
+}
+
+.flow > :where(:not(:first-child)) {
+  margin-top: var(--flow-space, 1rem);
+}
+
 a {
-	color: #3273dc;
+  color: var(--clr-primary);
 }
-nav a {
-	margin-right: 10px;
+
+a:hover,
+a:focus {
+  color: var(--clr-accent);
 }
-textarea {
-	width: 100%;
-	font-size: 16px;
+
+::marker {
+  color: var(--clr-accent);
 }
-input {
-	font-size: 16px;
-}
-content {
-	line-height: 1.6;
-}
-table {
-	width: 100%;
-}
+
 img {
-	max-width: 100%;
-	height: auto;
+  height: auto;
+  max-width: 100%;
+  display: block;
 }
+
 code {
-	padding: 2px 5px;
-	background-color: #f2f2f2;
+  padding: 2px 5px;
+  background-color: #f2f2f2;
 }
 pre {
-	padding: 1rem;
+  padding: 1rem;
 }
 pre > code {
-	all: unset;
-}
-blockquote {
-	border: 1px solid #999;
-	color: #222;
-	padding: 2px 0px 2px 20px;
-	margin: 0px;
-	font-style: italic;
+  all: unset;
 }
