--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,67 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { SITE_TITLE, SITE_DESCRIPTION, MAIN_PAGE_SLOTS } from '../consts';
 ---
+
+<style>
+  .welcome {
+    margin-inline: auto;
+    width: max(100% - 15rem,1280px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .welcome-text {
+    margin: auto;
+    width: 80ch;
+  }
+
+  .welcome-text h5 {
+    margin-top: 24px;
+    margin-left: 48px;
+  }
+
+  .welcome-play {
+    margin-top: 44px;
+    margin-inline: auto;
+    width: max-content;
+    display: block;
+  }
+
+  .slots {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .slots-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .slots-subtitle {
+    margin-top: 24px;
+  }
+
+  .slots-list {
+    margin-top: 24px;
+    display: flex;
+    gap: 22px;
+  }
+
+  .slots-list-item {
+    display: flex;
+    flex-direction: column;
+    row-gap: 14px;
+    text-align: center;
+  }
+
+  .slots-play {
+    width: fit-content;
+    align-self: center;
+  }
+</style>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,39 +70,47 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <Header title={SITE_TITLE} />
+    <div class="full-height">
+      <Header title={SITE_TITLE} />
+
+    <div class="welcome">
+      <div class="welcome-text">
+        <h2 class="accent">🎰 Игровые Автоматы Бесплатно!</h2>
+        <h4>Добро пожаловать в демо-слоты онлайн, идеальное место для захватывающих игр в казино <span class="accent">на демо рубли</span>!
+          &NewLine;
+          Наслаждайтесь азартом и развлечениями, играя в популярные игры казино <span class="accent">без риска</span>.</h4>
+
+          <a role="button" class="button accent welcome-play" type="button">Играть Демо</a>
+      </div>
+
+      <img width="700" height="600" src="images/detail.png" alt="Слоты бесплатно">
+    </div>
+    </div>
     <main class="container">
-      <h1>🧑‍🚀 Hello, Astronaut!</h1>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-        template serves as a lightweight, minimally-styled starting point for anyone looking to build
-        a personal website, blog, or portfolio with Astro.
-      </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-        React, or Vue to your project.
-      </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>Edit the site header items in <code>src/components/Header.astro</code></li>
-        <li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-        <li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-        <li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-      </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-      </p>
+      <div class="slots">
+        <div class="slots-header">
+          <h2>Слоты</h2>
+
+          <a class="button button_outline">Посмотреть все игры</a>
+        </div>
+
+        <h5 class="slots-subtitle">На нашем сайте вы сможете найти огромное количество головокружительных игровых автоматов на любой вкус!</h5>
+
+        <div class="slots-content">
+          <ul class="slots-list">
+            {
+              MAIN_PAGE_SLOTS.map((slot) => (
+                <li class="slots-list-item">
+                  <img width={slot.width} height={slot.height} class="align-self-center" src={slot.imageSrc} alt="">
+                  <h3>{slot.title}</h3>
+                  <p class="">{slot.description}</p>
+                  <a class="button slots-play mt-auto">Ирать Сейчас</a>
+                </li>
+              ))
+            }
+          </ul>
+        </div>
+      </div>
     </main>
     <Footer />
   </body>
