--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -14,6 +14,7 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 </a>
 <style>
 	a {
+		margin-left: 8px;
 		display: inline-block;
 		text-decoration: none;
 	}
