temp color fix #3

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
   --fs-800: clamp(2.80rem, calc(1.32rem + 7.42vw), 7.07rem);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --clr-text:       hsl(0, 0, 100%);
     --clr-surface:    hsl(204, 100%, 1%);
@@ -25,7 +25,7 @@
     --clr-secondary:  hsl(208, 83%, 13%);
     --clr-accent:     hsl(89, 85%, 33%);
   }
-}
+} */
 
 *,
 *::before,
@@ -38,7 +38,7 @@
 }
 
 html {
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   background-color: rgb(9, 10, 20);
 }
 
@@ -46,7 +46,7 @@ body {
   font-family: var(--ff-base);
   font-size: var(--fs-300);
   line-height: 1.6;
-  color: hsl(0, 0, 100%);;
+  color: #fff;
 }
 
 h1,h2,h3,h4,h5,h6 {
